REFACTOR: Remove br tags from html

--- a/home/templates/home/how_it_works.html
+++ b/home/templates/home/how_it_works.html
@@ -18,14 +18,14 @@
         <div class="inner-content-container">
             <h2 class="content-header">More about our service</h2>
             <p class="text-content">
-                In terms of offsetting your life’s estimated carbon footprint, commissioning the planting
+                In terms of offsetting your life's estimated carbon footprint, commissioning the planting
                 of around 1000 trees is a good target (see our facts section below for more information).
                 However, any trees that are planted will not only sequester carbon offsetting your 
-                carbon footprint but will also help to ‘rewild’ land that would otherwise be left in a 
+                carbon footprint but will also help to 'rewild' land that would otherwise be left in a 
                 cultivated state.
             </p>
             <p class="text-content">
-                What is ‘rewilding’, you might ask. Well, rewilding is the process of restoring an area 
+                What is 'rewilding', you might ask. Well, rewilding is the process of restoring an area 
                 of land to its natural state by reintroducing species of flora and fauna that have been 
                 driven out or removed. 
             </p>
@@ -58,12 +58,15 @@
                         13 tons of CO2 per year 
                     </li>
                     <li class="fact-item">
-                        A mature tree will sequester approximately 20kg of CO2 per year but an immature tree 
-                        might only absorb 10kg of carbon per year 
-                        <br>                        
-                        The amount of carbon absorbed also varies with the species and location of the tree, 
-                        amongst many other things. For this reason we estimate the absorption of carbon dioxide 
-                        to be 10 kg per year. It is a conservative estimate
+                        <p>
+                            A mature tree will sequester approximately 20kg of CO2 per year but an immature tree 
+                            might only absorb 10kg of carbon per year 
+                        </p>
+                        <p>                        
+                            The amount of carbon absorbed also varies with the species and location of the tree, 
+                            amongst many other things. For this reason we estimate the absorption of carbon dioxide 
+                            to be 10 kg per year. It is a conservative estimate
+                        </p>
                     </li>
                     <li class="fact-item">
                         The average life expectancy of a person in Ireland is 80 years
