--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -20,13 +20,15 @@
             <p class="text-content">
                 We are a small, dedicated team of plant growers and nature lovers 
                 who came into possession of a plot of land. 
-                <br>
+            </p>
+            <p class="text-content">
                 We wanted to rewild the site and plant the trees required to sequester 
-                our own life’s carbon, which we have been delighted to be able to do. 
+                our own life's carbon, which we have been delighted to be able to do. 
                 On completion our own personal targets we felt so elated that we felt 
                 driven to provide the same opportunity to feel this elation to others, 
                 hence the creation of this wild carbon service.
-                <br>
+            </p>
+            <p class="text-content">
                 We like nothing more to be able to provide you with the opportunity 
                 to make a real difference to the environment by availing of the service we offer.
             </p>
