--- a/plants/templates/plants/plant_detail.html
+++ b/plants/templates/plants/plant_detail.html
@@ -13,37 +13,50 @@
 {% block content %}
     <div class="content-container">
         <div class="inner-content-container">
-            <h2 class="content-header">{{ plant.common_name }}</h2>
-            <div class="plant-instance">
+            <h1 class="content-header">{{ plant.common_name }}</h1>
+            <div class="plant-instance plant-detail-plant-instance">
                 {% if plant.image %}
                     <img class="plant-image" src="{{ plant.image.url }}" alt="{{ plant.common_name }}">
                 {% else %}
                     <img class="plant-image" src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}">
                 {% endif %}
-                <div>{{ plant.common_name }}</div>
-                <span>{{ plant.genus }}</span>
-                <span>{{ plant.species }}</span>
-                <div>{{ plant.description }}</div>
-                <div>&#8364 {{ plant.price | calc_vat | floatformat:2 }} inc VAT</div>
-                <div>SKU: {{ plant.sku }}</div>
+                <h2 class="plant-instance-name">{{ plant.common_name }}</h2>
+                <hr>
+                <div>
+                    <span class="plant-field">Genus: </span><span class="plant-field-data">{{ plant.genus }}</span>
+                </div>
+                <div>
+                    <span class="plant-field">Species: </span><span class="plant-field-data">{{ plant.species }}</span>
+                </div>
+                <div>
+                    <span class="plant-field">Description: </span><span class="plant-field-data">{{ plant.description }}</span>
+                </div>
+                <div>
+                    <span class="plant-field">Price: </span><span class="plant-field-data">&#8364 {{ plant.price | calc_vat | floatformat:2 }} inc VAT</span>
+                </div>
+                <div>
+                    <span class="plant-field">SKU: </span><span class="plant-field-data">{{ plant.sku }}</span>
+                </div>
             </div>
             <!-- Quantity selector template code provided by Code Institute -->
-            <form class="form" action="{% url 'add_to_basket' plant.id %}" method="POST">
+            <form id="add-to-basket-form" class="form" action="{% url 'add_to_basket' plant.id %}" method="POST">
                 {% csrf_token %}
                 <div>
-                    <p><strong>Quantity:</strong></p>
+                    <div class="label">
+                        <strong>Quantity:</strong>
+                    </div>
                     <div>
                         <div class="input-group input-group-{{ plant.id }}">
                             <div class="input-group-prepend">
-                                <button class="decrement-qty btn decrement-qty_{{ plant.id }}" data-item_id="{{ plant.id }}">
+                                <button class="decrement-qty quantity-button quantity-button-left decrement-qty_{{ plant.id }}" data-item_id="{{ plant.id }}">
                                     <span class="icon">
                                         <i class="fas fa-minus"></i>
                                     </span>
                                 </button>
                             </div>
-                            <input class="form-control qty_input id_qty_{{ plant.id }}" data-item_id="{{ plant.id }}" type="number" name="quantity" value="1" min="1" max="99">
+                            <input class="form-control quantity-input qty_input id_qty_{{ plant.id }}" data-item_id="{{ plant.id }}" type="number" name="quantity" value="1" min="1" max="99">
                             <div class="input-group-append">
-                                <button class="increment-qty btn increment-qty_{{ plant.id }}" data-item_id="{{ plant.id }}">
+                                <button class="increment-qty button quantity-button increment-qty_{{ plant.id }}" data-item_id="{{ plant.id }}">
                                     <span class="icon">
                                         <i class="fas fa-plus"></i>
                                     </span>
@@ -52,16 +65,18 @@
                         </div>
                     </div>
                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                    <button type="submit" class="btn">Add To Basket</button>
                 </div>
             </form>
             <!-- End of quantity selector template code provided by Code Institute -->
-            <a class="nav-link" href="{% url 'carbon_capture' %}">
-                <span>
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span>Continue Shopping</span>
-            </a> 
+            <div class="button-container">
+                <a class="button width-100-button button-content plant-detail-button" href="{% url 'carbon_capture' %}">
+                    <span>
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span>Continue Shopping</span>
+                </a>
+                <button form="add-to-basket-form" type="submit" class="width-100-button button light-button plant-detail-button">Add To Basket</button>
+            </div>
         </div>
     </div>
 {% endblock%}
