FEAT: Update plant record table styles

--- a/plants/templates/plants/list_plant_records.html
+++ b/plants/templates/plants/list_plant_records.html
@@ -15,7 +15,7 @@
         <div class="text-content faq-list">
             <a class="button plant-record-button" href="{% url 'add_plant_record' %}">Add plant record</a>
             <div class="table-responsive rounded d-md-block">
-                <h2>Pending Trees</h2>
+                <h2 class="records-header">Pending Trees</h2>
                 <table class="table plant-record-table table-sm table-borderless">
                     <thead>
                         <tr>
@@ -48,7 +48,7 @@
             </div>
             <hr>
             <div class="table-responsive rounded d-md-block">
-                <h2>Growing Trees</h2>
+                <h2 class="records-header">Growing Trees</h2>
                 <table class="table plant-record-table table-sm table-borderless">
                     <thead>
                         <tr>
@@ -81,7 +81,7 @@
             </div>
             <hr>
             <div class="table-responsive rounded d-md-block">
-                <h2>Planted Trees</h2>
+                <h2 class="records-header">Planted Trees</h2>
                 <table class="table plant-record-table table-sm table-borderless">
                     <thead>
                         <tr>
