--- a/profiles/templates/profiles/carbon_summary.html
+++ b/profiles/templates/profiles/carbon_summary.html
@@ -31,10 +31,10 @@
         <div class="inner-content-container">
             <h2 class="content-header">Your Planting Records</h2>
             <div class="text-content">
-                <div class="table-responsive rounded d-none d-md-block">
-                    <h2>Planted Trees</h2>
-                    <table class="table table-sm table-borderless">
-                        <thead class="text-black">
+                <div class="table-responsive">
+                    <h2 class="records-header">Planted Trees</h2>
+                    <table class="table carbon-summary-plant-record-table table-sm table-borderless">
+                        <thead>
                             <tr>
                                 <th scope="col">Plant name</th>
                                 <th scope="col">plant id</th>
@@ -56,10 +56,11 @@
                         {% endfor %}
                     </table>
                 </div>
-                <div class="table-responsive rounded d-none d-md-block">
-                    <h2>Growing Trees</h2>
-                    <table class="table table-sm table-borderless">
-                        <thead class="text-black">
+                <hr>
+                <div class="table-responsive">
+                    <h2 class="records-header">Growing Trees</h2>
+                    <table class="table carbon-summary-plant-record-table table-sm table-borderless">
+                        <thead>
                             <tr>
                                 <th scope="col">Plant name</th>
                                 <th scope="col">plant id</th>
@@ -81,10 +82,11 @@
                         {% endfor %}
                     </table>
                 </div>
-                <div class="table-responsive rounded d-none d-md-block">
-                    <h2>Pending Trees</h2>
-                    <table class="table table-sm table-borderless">
-                        <thead class="text-black">
+                <hr>
+                <div class="table-responsive">
+                    <h2 class="records-header">Pending Trees</h2>
+                    <table class="table carbon-summary-plant-record-table table-sm table-borderless">
+                        <thead>
                             <tr>
                                 <th scope="col">Plant name</th>
                                 <th scope="col">plant id</th>
