FEAT: Update plant availability page styles

--- a/plants/templates/plants/confirm_delete_plant_record.html
+++ b/plants/templates/plants/confirm_delete_plant_record.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="content-container">
     <div class="inner-content-container standard-inner-content-container">
-        <h1 class="content-header">Confirm plant record deletion</h1>
+        <h1 class="content-header">Confirm Plant Record Deletion</h1>
         <div class="standard-content">
             <div>
                 <form id="confirm-plant-record-delete-form" method="post">
