--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,7 @@
     --page-title-background-colour: rgba(9, 27, 14, 0.8);
     --inner-content-container-colour: rgb(74, 105, 76);
     --inner-content-container-shadow: rgb(191, 196, 168);
+    --inner-content-container-shadow-dark: rgba(9, 27, 14, 1);
     --title-font-colour: rgb(255, 255, 255);
     --main-font-colour:  rgba(255, 255, 255, 0.9);
     --label-font-colour: rgba(249, 255, 215, 0.9);
@@ -866,6 +867,10 @@ a:hover,
     text-decoration: none;
 }
 
+.image-nav-container:hover {
+    box-shadow: 0px 0px 10px 1px var(--inner-content-container-shadow-dark);
+}
+
 .plant-instance-name {
     margin-bottom: 0;
     margin-top: 10px;
@@ -932,8 +937,19 @@ hr {
     margin-bottom: 10px;
 }
 
-.checkbox {
-    accent-color: var(--button-background);
+.checkbox,
+.form-check-input[type=checkbox]:checked {
+    accent-color: var(--button-green-background-solid);
+    background-color: var(--button-green-background-solid);
+    border-color: var(--button-green-border);
+    color: white;
+    height: 16px;
+    width: 16px;
+}
+
+.form-check-input[type=checkbox]:focus,
+.form-check-input[type=checkbox]:active {
+    border-color: var(--button-green-border);
 }
 
 .confirm-delete {
