--- a/locations/templates/locations/location_plants_link.html
+++ b/locations/templates/locations/location_plants_link.html
@@ -10,16 +10,20 @@
 {% endblock %}
 
 {% block content %}
-<h2>Plant Availability</h2>
-<div>
-    <form method="post">
-        {{ form | crispy }}
-        {% csrf_token %}
+<div class="content-container">
+    <div class="inner-content-container standard-inner-content-container">
+        <h1 class="content-header">Plant Availability</h1>
         <div>
-            <button type="submit" >Save associations</button>
-            <a href="{% url 'home' %}">Home</a>
+            <form id="plant-availability-form" method="post">
+                {{ form | crispy }}
+                {% csrf_token %}
+            </form>
+            <div class="button-container">
+                <a class="button width-100-button button-content" href="{% url 'home' %}">Home</a>
+                <button form="plant-availability-form" class="width-100-button button light-button"  type="submit" >Save associations</button>
+            </div>
         </div>
-    </form>
+    </div>
 </div>
 {% endblock content %}
 
