--- a/plants/templates/plants/confirm_delete_plant.html
+++ b/plants/templates/plants/confirm_delete_plant.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="content-container">
     <div class="inner-content-container standard-inner-content-container">
-        <h1 class="content-header">Confirm plant deletion</h1>
+        <h1 class="content-header">Confirm Plant Deletion</h1>
         <div class="standard-content">
             <form id="confirm-plant-delete-form" method="post">
                 {% csrf_token %}
