--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,33 +15,26 @@
 
 {% block content %}
     <!-- Template skeleton provided by Code Insititute -->
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
-                <hr>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <p class="text-muted">Default Billing Information</p>
+    <div class="content-container">
+        <div class="inner-content-container">
+            <h1 class="content-header">My Profile</h1>
+            <div>
+                <h2  class="records-header">Default Billing Information</h2>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                    <button class="width-100-button mt-2 mb-2 button light-button">Update Information</button>
                 </form>
             </div>
-            <div class="col-12 col-lg-6">
-                <p>Order History</p>
+            <div>
+                <h2 class="records-header">Order History</h2>
                 <div class="order-history table-responsive">
                     {% for data in order_data %}
                         <hr>
-                        <table class="table table-sm table-borderless">
+                        <table class="table order-history-table table-sm table-borderless">
                             <thead>
                                 <tr>
-                                    <th>Order Number</th>
+                                    <th class="order-number">Order Number</th>
                                     <th>Date</th>
                                     <th>Items</th>
                                     <th>Order Total</th>
@@ -69,8 +62,8 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <div>Associated Plant Records</div>
-                        <table class="table table-sm table-borderless">
+                        <div class="associated-record-label">Associated Plant Records</div>
+                        <table class="table plant-record-table table-sm table-borderless">
                             <thead>
                                 <tr>
                                     <th>Name</th>
@@ -101,6 +94,7 @@
                     {% endfor %}
                 </div>
             </div>
+
         </div>
     </div>
 {% endblock %}
