--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -8,18 +8,25 @@ Styles provided by Code Institute */
 }
 
 #profile-update-form .form-control {
-    color: #000;
+    color: var(--button-green-font);
+    background-color: rgb(240, 241, 234);
+    border: none;
+}
+
+#profile-update-form .form-control:focus,
+#profile-update-form .form-control:active {
+    background-color:rgb(255, 255, 255);
 }
 
 #profile-update-form input::placeholder {
-    color: #aab7c4;
+    color: var(--button-green-font);
 }
 
 #id_default_country,
 #id_default_country option:not(:first-child) {
-    color: #000;
+    color: var(--button-green-font);
 }
 
 #id_default_country option:first-child {
-    color: #aab7c4;
+    color: var(--button-green-font);
 }
