FEAT: Update add image button on add/edit plant pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -712,6 +712,21 @@ a:hover,
     margin-bottom: 5px;
 }
 
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
 /* Modal styles */
 .privacy-policy {
     padding: 0;
