--- a/plants/templates/plants/custom_widget_templates/custom_clearable_file_input.html
+++ b/plants/templates/plants/custom_widget_templates/custom_clearable_file_input.html
@@ -11,7 +11,7 @@
     {% endif %}<br>
     {{ widget.input_text }}
 {% endif %}
-<span class="btn image-select">
+<span class="btn image-select mt-2 button btn-file">
     Select Image <input class="image-select-input" id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
 </span>
 <strong><p class="text-danger" id="filename"></p></strong>
